# reclip

./: README.md  pyproject.toml  requirements.txt
reclip/data/: hf_flat_icons_loader.py
reclip/eval/: icon_similarity_evaluator.py
reclip/models/: load_registervit.py  reclip_dino_model.py  register_vit.py  registervit_model.py  text_encoder.py
reclip/pipeline/: dino_scorer.py  embed_and_score.py  openclip_pipeline.py  reclip_dino_pipeline.py
reclip/training/: train_registervit.py
reclip/utils/: icon_metadata.py  model_recaption.py  similarity_judge.py
tests/: test_dino_model.py  test_dino_scorer.py  test_hf_flat_icons_openclip.py  test_model_recaption.py  test_openclip_pipeline.py  test_pipeline.py  test_registervit.py
